--- a/elves/DESCRIPTION
+++ b/elves/DESCRIPTION
@@ -8,6 +8,6 @@ Maintainer: Jose A. Aponte <jose.aponte@pragmaanalytics.com>
 Description: Elves helping Santa all the way!
 License: GPL (>= 2)
 Imports: Rcpp (>= 0.11.3)
-Depends: data.table, lubridate, doSNOW, gtable
+Depends: data.table, lubridate, doSNOW, gtable, foreach
 Suggests: ggplot2
 LinkingTo: Rcpp
